objects/Festival__c.object
<CustomObject><fields>
        <fullName>Capacity__c</fullName>
        <description>Capacity of the event</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the event</description>
        <inlineHelpText>End date of the event</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of the festival</description>
        <inlineHelpText>Date when the festival starts</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Tickets_Sold__c</fullName>
        <description>number of tickets sold for a event</description>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Festival</label><nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Festivals</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>